--- a/telecamera.service
+++ b/telecamera.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Telegram bot that returns machine ip address
+Description=Telegram bot that returns machine camera screenshot
 After=network-online.target
 Wants=network-online.target
 
